--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joga da velha</title>
   <style>
+    @font-face {
+    font-family: Pixeled;
+    src: url(VCR_OSD_MONO_1.001.ttf);
+    font-weight: normal;
+    font-style: normal;
+}
     body{
+      font-family: Pixeled;
       margin: 0px;
       padding: 0px;
       box-sizing: border-box;
       text-align: center;
       background-color: rgb(16, 124, 190);
       height: 110vh;
-      font-family: Arial, Helvetica, sans-serif;
     }
     #msg{
       font-size: 1.5em;
