--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       text-align: center;
       background-color: rgb(16, 124, 190);
       height: 110vh;
+      font-size: 1.5em;
     }
     #msg{
       font-size: 1.5em;
