--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         top: 30vh;
         right: 10vw;
       }
+
+     
     }
   </style>
 </head>
@@ -184,7 +186,7 @@
         setTimeout(restartGame, 1500)
       } else {
         currentPlayer = currentPlayer === 'X'?'O':'X'
-        msg.textContent = 'É a vez do jogador ' + currentPlayer
+        msg.textContent = 'vez do jogador ' + currentPlayer
       }
     }
 
